# echo

./: .gitignore  README.md  bun.lockb  package.json  setup_rocm.sh  tauri.windows.conf.json  vite.config.js
.echo/: tasks.md
.github/workflows/: build.yml
docs/: ai-agent-task-list.md  ai-agent-transformation-plan.md  echo-pointer-features-plan.md  mcp-setup-guide.md  meeting-transcription-feature.md  settings-redesign-plan.md  voice-command-fallback-mechanism.md  voice-command-implementation-plan.md
scripts/: claude-system-prompt.md  echo-task  install-echo-task.sh
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: list_devices.rs
src-tauri/src/: history.rs  lib.rs  openai_client.rs  recording_manager.rs  rocm_detection.rs  settings.rs  state.rs  voice_activation.rs  voice_command.rs
src-tauri/src/ai_agent/: commands.rs  context.rs  core.rs  integrations.rs  mod.rs  nlp.rs
src-tauri/src/audio_capture/: mod.rs  platform.rs  virtual_devices.rs
src-tauri/src/claude/: api_server.rs  invoke.rs  mod.rs  prompt.rs
src-tauri/src/commands/: audio.rs  history.rs  meeting.rs  mod.rs  tasks.rs  transcription.rs  voice_command.rs  window.rs
src-tauri/src/mcp/: client.rs  mod.rs  protocol.rs  registry.rs  server.rs
src-tauri/src/meeting/: ai_processor.rs  mod.rs  service.rs  storage.rs  transcription.rs
src-tauri/src/tasks/: markdown.rs  mod.rs  models.rs  service.rs  storage.rs
src-tauri/src/transcription/: faster_whisper.rs  mod.rs  openai.rs  python_env.rs  whisper_candle.rs  whisper_local.rs
src-tauri/src/workspace/: context.rs  detection.rs  git.rs  mod.rs  watcher.rs
src/components/Settings/: SettingsDrawer.svelte  SettingsNavigation.svelte
src/components/Settings/pages/: AdvancedFeaturesPage.svelte  CoreSettingsPage.svelte  HistoryPage.svelte  MeetingsPage.svelte  TasksPage.svelte  VoiceCommandsPage.svelte  WelcomePage.svelte
src/components/ui/: AnimatedLogo.svelte
src/routes/: +page.svelte
src/routes/overlay/: +page.svelte
src/styles/: animations.css  dark-theme.css
