[package]
name = "echotype"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "echotype_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-opener = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-fs = "2.0"
mouse_position = "0.1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
cpal = "0.15"
hound = "3.5"
arboard = "3.4"
enigo = "0.2"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.8"
device_query = "2.1"
dirs = "5.0"
notify-rust = "4.10"
async-trait = "0.1"
whisper-rs = "0.11"
futures-util = "0.3"
once_cell = "1.19"

[features]
default = []
# GPU acceleration features for potential future use
cuda = []
metal = []

