[package]
name = "echo"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "echo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-opener = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
mouse_position = "0.1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
cpal = "0.15"
hound = "3.5"
arboard = "3.4"
enigo = { version = "0.6", default-features = false, features = ["x11rb"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.8"
device_query = "2.1"
dirs = "5.0"
notify-rust = "4.10"
async-trait = "0.1"
whisper-rs = "0.11"
futures-util = "0.3"
once_cell = "1.19"
rand = "0.8"

# MCP and AI Agent dependencies
jsonrpc-core = "18.0"
jsonrpc-ws-server = "18.0"
jsonrpc-http-server = "18.0"
jsonrpc-derive = "18.0"
tungstenite = "0.23"
tokio-tungstenite = "0.23"
url = "2.5"

# Database dependencies
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }

# AI/NLP dependencies
regex = "1.10"
unicode-segmentation = "1.10"
levenshtein = "1.0"

# HTTP client for API integrations
base64 = "0.22"
mime = "0.3"
form-data = "0.6"
urlencoding = "2.1"

# Encryption and security
ring = "0.17"
data-encoding = "2.5"
keyring = "2.3"

# Configuration and serialization
toml = "0.8"
config = "0.14"

# Logging
log = "0.4"
env_logger = "0.11"

# Additional utilities
thiserror = "1.0"
parking_lot = "0.12"
which = "8.0.0"
notify = "8.2.0"

# HTTP server for Claude Code API
warp = "0.3"

[features]
default = ["rocm"]
# GPU acceleration features for potential future use
cuda = []
metal = []
rocm = []

